<resources>
    <string name="app_name">TatsByTatsPOS</string>
    <string name="product_hint">Search products</string>
    <string name="orders_hint">Search orders</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="reset">Reset</string>
    <string name="peso">₱</string>
    <string name="menu_quantity">0</string>
    <string name="product_name">Product Name</string>
    <string name="order_number">Order #1</string>
    <string name="product_price">150</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="inventory">Inventory</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="date">May 1 2025</string>
    <string name="time">3:30pm</string>
    <string name="settings">Settings</string>
    <string name="user_management">User Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visibility_indicator">Toggle password visibility</string>
</resources>