<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/cashier_menu_group">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/order_history"
            />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/admin_menu_group"
        android:visible="false">

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/inventory"
            />
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/user_management"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/settings"
            />
    </group>

</menu>