<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:padding="25dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/round_rectangle"
    android:id="@+id/inventory_card"
    android:clickable="true"
    android:focusable="true"
    >

    <!-- Image and Product Info -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="8dp">

        <!-- Product Name and Price -->
        <TextView
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="20sp"
            android:gravity="start"
            android:textColor="@android:color/black"
            />

        <TextView
            android:fontFamily="@font/abel"
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/abel"
            android:text="@string/menu_quantity"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

    </FrameLayout>

</LinearLayout>