<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/upperNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/sideBarButton"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_marginTop="10sp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/baseline_menu_24"
                app:tint="@color/black" />

            <EditText
                android:id="@+id/searchProducts"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_gravity="end"
                android:layout_marginEnd="30sp"
                android:background="@drawable/round_edittext"
                android:fontFamily="@font/abel"
                android:hint="@string/product_hint"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="15sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/menuRecyclerView"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/confirmButton"
            android:text="@string/confirm_order"
            android:textSize="18sp"
            android:layout_width="180sp"
            android:layout_height="60sp"
            android:fontFamily="@font/abel"
            android:layout_marginRight="15sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/orange" />

        <Button
            android:id="@+id/resetButton"
            android:text="@string/reset"
            android:textSize="18sp"
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:fontFamily="@font/abel"
            android:textColor="@color/black"
            android:backgroundTint="@color/orange"
             />
    </LinearLayout>

</LinearLayout>