<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:padding="25dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/round_rectangle"
    android:id="@+id/order_card"
    android:clickable="true"
    android:focusable="true"
    >

    <!-- Image and Product Info -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="8dp">

        <!-- Product Name and Price -->
        <TextView
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textSize="20sp"
            android:gravity="start"
            android:textColor="@android:color/black"
            />

        <TextView
            android:fontFamily="@font/abel"
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:fontFamily="@font/abel"
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

    </FrameLayout>

    <!-- Order Amount and Payment Info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <TextView
            android:fontFamily="@font/abel"
            android:id="@+id/order_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="₱0.00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:fontFamily="@font/abel"
            android:id="@+id/payment_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payment Method"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>