<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    tools:context=".activity.Inventory"
    tools:openDrawer="start">

    <!-- MAIN CONTENT FIRST -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/sideBarButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/baseline_menu_24"
                app:tint="@color/black" />

            <EditText
                android:id="@+id/searchProducts"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:background="@drawable/round_edittext"
                android:fontFamily="@font/abel"
                android:hint="@string/product_hint"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="15sp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menuRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="List of inventory items" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:layout_margin="20sp"
                android:backgroundTint="@color/orange"
                android:tint="@color/white"
                android:contentDescription="@string/inventory"
                app:srcCompat="@drawable/baseline_add_24"
                />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <!-- NAVIGATION DRAWER SECOND -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/orange"
        android:layout_marginTop="25dp"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@android:color/transparent"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
