<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    tools:context=".activity.FileMaintenance"
    tools:openDrawer="start">

    <!-- MAIN CONTENT FIRST -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/MyDialogTheme"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/sideBarButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/baseline_menu_24"
                    app:tint="@color/black" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_edittext"
                    android:fontFamily="@font/abel"
                    android:textSize="15sp"
                    app:queryHint="@string/product_hint"
                    app:iconifiedByDefault="false" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menuRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/appbar_scrolling_view_behavior" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:layout_margin="20sp"
                android:backgroundTint="@color/orange"
                android:tint="@color/white"
                android:contentDescription="@string/inventory"
                app:srcCompat="@drawable/baseline_add_24"
                />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <!-- NAVIGATION DRAWER SECOND -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/orange"
        android:layout_marginTop="25dp"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@android:color/transparent"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
